hphp/test/zend/good/tests/classes/visibility_003b.php.expectf

Fatal error: Access level to fail::f3() must be protected (as in class same) or weaker in %s/visibility_003b.php on line 21
